--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <script src="index.js"></script>
   <footer>
-    <p>Made by <img class ="imgNima" src="images/nimaphoto.png" alt=""><a href="https://nima-jamalian.github.io/CV/"> Nima Jamalian</a></p>
+    <p class= "footerText">Made by <img class ="imgNima" src="images/nimaphoto.png" alt=""><a href="https://nima-jamalian.github.io/CV/"> Nima Jamalian</a></p>
   </footer>
 </body>
 
