--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 <body>
 
   <h1 id="title">Drum 🥁 Kit</h1>
-  <div class = "drumKit">
     <div class="set">
-      <button class="drum w">w</button>
+      <button class="w drum">w</button>
       <button class="a drum">a</button>
       <button class="s drum">s</button>
       <button class="d drum">d</button>
@@ -28,7 +27,6 @@
       <button class="l drum">l</button>
     </div>
     <img class = "drumKitImg" src="images/Drum.png" alt="Drum Kit">
-  </div>
 
 
   <script src="index.js"></script>
